@@ -19,7 +19,6 @@
 package org.apache.pinot.broker.routing.instanceselector;
 
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import java.time.Clock;
@@ -1299,7 +1298,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
     Map<String, List<Pair<String, String>>> idealSateMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
     IdealState idealState = createIdealState(idealSateMap);
 
@@ -1308,7 +1307,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance1:online]
     Map<String, List<Pair<String, String>>> externalViewMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance1, ONLINE)));
 
     ExternalView externalView = createExternalView(externalViewMap);
@@ -1324,10 +1323,10 @@ public class InstanceSelectorTest {
       InstanceSelector.SelectionResult selectionResult =
           selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
       if (isReplicaGroupType(selectorType)) {
-        assertEquals(selectionResult.getSegmentToInstanceMap(), ImmutableMap.of(oldSeg, instance0));
-        assertEquals(selectionResult.getOptionalSegmentToInstanceMap(), ImmutableMap.of(newSeg, instance0));
+        assertEquals(selectionResult.getSegmentToInstanceMap(), Map.of(oldSeg, instance0));
+        assertEquals(selectionResult.getOptionalSegmentToInstanceMap(), Map.of(newSeg, instance0));
       } else {
-        assertEquals(selectionResult.getSegmentToInstanceMap(), ImmutableMap.of(oldSeg, instance0, newSeg, instance1));
+        assertEquals(selectionResult.getSegmentToInstanceMap(), Map.of(oldSeg, instance0, newSeg, instance1));
         assertTrue(selectionResult.getOptionalSegmentToInstanceMap().isEmpty());
       }
       assertTrue(selectionResult.getUnavailableSegments().isEmpty());
@@ -1341,13 +1340,13 @@ public class InstanceSelectorTest {
           selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
       switch (selectorType) {
         case BALANCED_INSTANCE_SELECTOR:
-          assertEquals(selectionResult.getSegmentToInstanceMap(), ImmutableMap.of(oldSeg, instance1));
-          assertEquals(selectionResult.getOptionalSegmentToInstanceMap(), ImmutableMap.of(newSeg, instance0));
+          assertEquals(selectionResult.getSegmentToInstanceMap(), Map.of(oldSeg, instance1));
+          assertEquals(selectionResult.getOptionalSegmentToInstanceMap(), Map.of(newSeg, instance0));
           break;
         case STRICT_REPLICA_GROUP_INSTANCE_SELECTOR_TYPE: // fall through
         case REPLICA_GROUP_INSTANCE_SELECTOR_TYPE:
           assertEquals(selectionResult.getSegmentToInstanceMap(),
-              ImmutableMap.of(oldSeg, instance1, newSeg, instance1));
+              Map.of(oldSeg, instance1, newSeg, instance1));
           assertTrue(selectionResult.getOptionalSegmentToInstanceMap().isEmpty());
           break;
         default:
@@ -1367,11 +1366,11 @@ public class InstanceSelectorTest {
         case BALANCED_INSTANCE_SELECTOR: // fall through
         case REPLICA_GROUP_INSTANCE_SELECTOR_TYPE:
           assertEquals(selectionResult.getSegmentToInstanceMap(),
-              ImmutableMap.of(oldSeg, instance0, newSeg, instance1));
+              Map.of(oldSeg, instance0, newSeg, instance1));
           break;
         case STRICT_REPLICA_GROUP_INSTANCE_SELECTOR_TYPE:
           assertEquals(selectionResult.getSegmentToInstanceMap(),
-              ImmutableMap.of(oldSeg, instance1, newSeg, instance1));
+              Map.of(oldSeg, instance1, newSeg, instance1));
           break;
         default:
           throw new RuntimeException("unsupported selector type:" + selectorType);
@@ -1381,7 +1380,7 @@ public class InstanceSelectorTest {
     }
     {
       int requestId = 1;
-      Map<String, String> expectedSelectionResult = ImmutableMap.of(oldSeg, instance1, newSeg, instance1);
+      Map<String, String> expectedSelectionResult = Map.of(oldSeg, instance1, newSeg, instance1);
       InstanceSelector.SelectionResult selectionResult =
           selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
       assertEquals(selectionResult.getSegmentToInstanceMap(), expectedSelectionResult);
@@ -1411,7 +1410,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
     Map<String, List<Pair<String, String>>> idealSateMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
 
     IdealState idealState = createIdealState(idealSateMap);
@@ -1421,7 +1420,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> []
     //   [segment1] -> [instance0: online]
     Map<String, List<Pair<String, String>>> externalViewMap =
-        ImmutableMap.of(newSeg, ImmutableList.of(), oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE)));
+        Map.of(newSeg, ImmutableList.of(), oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE)));
 
     ExternalView externalView = createExternalView(externalViewMap);
 
@@ -1429,11 +1428,11 @@ public class InstanceSelectorTest {
     selector.init(enabledInstances, EMPTY_SERVER_MAP, idealState, externalView, onlineSegments);
     // We don't mark segment as unavailable.
     int requestId = 0;
-    Map<String, String> expectedResult = ImmutableMap.of(oldSeg, instance0);
+    Map<String, String> expectedResult = Map.of(oldSeg, instance0);
     InstanceSelector.SelectionResult selectionResult =
         selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedResult);
-    assertEquals(selectionResult.getOptionalSegmentToInstanceMap(), ImmutableMap.of(newSeg, instance0));
+    assertEquals(selectionResult.getOptionalSegmentToInstanceMap(), Map.of(newSeg, instance0));
     assertTrue(selectionResult.getUnavailableSegments().isEmpty());
 
     // Advance the clock to make newSeg to old segment and we see newSeg is reported as unavailable segment.
@@ -1441,7 +1440,7 @@ public class InstanceSelectorTest {
     selector.init(enabledInstances, EMPTY_SERVER_MAP, idealState, externalView, onlineSegments);
     selectionResult = selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     if (STRICT_REPLICA_GROUP_INSTANCE_SELECTOR_TYPE.equals(selectorType)) {
-      expectedResult = ImmutableMap.of();
+      expectedResult = Map.of();
       assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(newSeg, oldSeg));
     } else {
       assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(newSeg));
@@ -1470,7 +1469,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
     Map<String, List<Pair<String, String>>> idealSateMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
 
     IdealState idealState = createIdealState(idealSateMap);
@@ -1480,7 +1479,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> []
     Map<String, List<Pair<String, String>>> externalViewMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of());
 
     ExternalView externalView = createExternalView(externalViewMap);
@@ -1490,7 +1489,7 @@ public class InstanceSelectorTest {
 
     // We don't mark segment as unavailable.
     int requestId = 0;
-    Map<String, String> expectedResult = ImmutableMap.of(oldSeg, instance0);
+    Map<String, String> expectedResult = Map.of(oldSeg, instance0);
 
     InstanceSelector.SelectionResult selectionResult =
         selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
@@ -1499,14 +1498,14 @@ public class InstanceSelectorTest {
 
     // Report error instance for segment1 since segment1 becomes old and we should report it as unavailable.
     externalViewMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance0, ERROR)));
 
     externalView = createExternalView(externalViewMap);
     selector.onAssignmentChange(idealState, externalView, onlineSegments);
     selectionResult = selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     if (selectorType == STRICT_REPLICA_GROUP_INSTANCE_SELECTOR_TYPE) {
-      expectedResult = ImmutableMap.of();
+      expectedResult = Map.of();
       assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(oldSeg, newSeg));
     } else {
       assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(newSeg));
@@ -1515,15 +1514,15 @@ public class InstanceSelectorTest {
 
     // Get segment1 back online in instance1
     externalViewMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance0, ERROR), Pair.of(instance1, ONLINE)));
 
     externalView = createExternalView(externalViewMap);
     selector.onAssignmentChange(idealState, externalView, onlineSegments);
     if (selectorType == STRICT_REPLICA_GROUP_INSTANCE_SELECTOR_TYPE) {
-      expectedResult = ImmutableMap.of(oldSeg, instance1, newSeg, instance1);
+      expectedResult = Map.of(oldSeg, instance1, newSeg, instance1);
     } else {
-      expectedResult = ImmutableMap.of(oldSeg, instance0, newSeg, instance1);
+      expectedResult = Map.of(oldSeg, instance0, newSeg, instance1);
     }
     selectionResult = selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedResult);
@@ -1551,7 +1550,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
     Map<String, List<Pair<String, String>>> idealSateMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
 
     IdealState idealState = createIdealState(idealSateMap);
@@ -1561,7 +1560,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> []
     Map<String, List<Pair<String, String>>> externalViewMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of());
 
     ExternalView externalView = createExternalView(externalViewMap);
@@ -1571,7 +1570,7 @@ public class InstanceSelectorTest {
 
     // We don't mark segment as unavailable.
     int requestId = 0;
-    Map<String, String> expectedBalancedInstanceSelectorResult = ImmutableMap.of(oldSeg, instance0);
+    Map<String, String> expectedBalancedInstanceSelectorResult = Map.of(oldSeg, instance0);
 
     InstanceSelector.SelectionResult selectionResult =
         selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
@@ -1580,7 +1579,7 @@ public class InstanceSelectorTest {
 
     // Segment1 is not old anymore with state converge.
     externalViewMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
 
     externalView = createExternalView(externalViewMap);
@@ -1588,7 +1587,7 @@ public class InstanceSelectorTest {
 
     // Segment1 becomes unavailable.
     externalViewMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of());
 
     externalView = createExternalView(externalViewMap);
@@ -1597,7 +1596,7 @@ public class InstanceSelectorTest {
     selector.onAssignmentChange(idealState, externalView, onlineSegments);
     selectionResult = selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     if (selectorType == STRICT_REPLICA_GROUP_INSTANCE_SELECTOR_TYPE) {
-      expectedBalancedInstanceSelectorResult = ImmutableMap.of();
+      expectedBalancedInstanceSelectorResult = Map.of();
       assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(oldSeg, newSeg));
     } else {
       assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(newSeg));
@@ -1620,7 +1619,7 @@ public class InstanceSelectorTest {
     Set<String> enabledInstances = ImmutableSet.of(instance0, instance1);
 
     Map<String, List<Pair<String, String>>> idealSateMap =
-        ImmutableMap.of(oldSeg0, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), oldSeg1,
+        Map.of(oldSeg0, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), oldSeg1,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
 
     IdealState idealState = createIdealState(idealSateMap);
@@ -1630,7 +1629,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
     Map<String, List<Pair<String, String>>> externalViewMap =
-        ImmutableMap.of(oldSeg0, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), oldSeg1,
+        Map.of(oldSeg0, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), oldSeg1,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
 
     ExternalView externalView = createExternalView(externalViewMap);
@@ -1642,13 +1641,13 @@ public class InstanceSelectorTest {
     String newSeg = "segment2";
     onlineSegments = ImmutableSet.of(oldSeg0, oldSeg1, newSeg);
     idealSateMap =
-        ImmutableMap.of(oldSeg0, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), oldSeg1,
+        Map.of(oldSeg0, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), oldSeg1,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
 
     idealState = createIdealState(idealSateMap);
     externalViewMap =
-        ImmutableMap.of(oldSeg0, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), oldSeg1,
+        Map.of(oldSeg0, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), oldSeg1,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
 
     externalView = createExternalView(externalViewMap);
@@ -1658,11 +1657,11 @@ public class InstanceSelectorTest {
     Map<String, String> expectedResult;
     switch (selectorType) {
       case BALANCED_INSTANCE_SELECTOR:
-        expectedResult = ImmutableMap.of(oldSeg0, instance0, oldSeg1, instance1);
+        expectedResult = Map.of(oldSeg0, instance0, oldSeg1, instance1);
         break;
       case REPLICA_GROUP_INSTANCE_SELECTOR_TYPE: // fall through
       case STRICT_REPLICA_GROUP_INSTANCE_SELECTOR_TYPE:
-        expectedResult = ImmutableMap.of(oldSeg0, instance0, oldSeg1, instance0);
+        expectedResult = Map.of(oldSeg0, instance0, oldSeg1, instance0);
         break;
       default:
         throw new RuntimeException("unsupported type:" + selectorType);
@@ -1706,7 +1705,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
     Map<String, List<Pair<String, String>>> idealSateMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
 
     IdealState idealState = createIdealState(idealSateMap);
@@ -1716,7 +1715,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online]
     Map<String, List<Pair<String, String>>> externalViewMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance0, ONLINE)));
 
     ExternalView externalView = createExternalView(externalViewMap);
@@ -1729,11 +1728,11 @@ public class InstanceSelectorTest {
     Map<String, String> expectedResult;
     switch (selectorType) {
       case BALANCED_INSTANCE_SELECTOR:
-        expectedResult = ImmutableMap.of(oldSeg, instance0);
+        expectedResult = Map.of(oldSeg, instance0);
         break;
       case REPLICA_GROUP_INSTANCE_SELECTOR_TYPE:
       case STRICT_REPLICA_GROUP_INSTANCE_SELECTOR_TYPE:
-        expectedResult = ImmutableMap.of(oldSeg, instance0, newSeg, instance0);
+        expectedResult = Map.of(oldSeg, instance0, newSeg, instance0);
         break;
       default:
         throw new RuntimeException("Unsupported type:" + selectorType);
@@ -1750,7 +1749,7 @@ public class InstanceSelectorTest {
     selector.onInstancesChange(enabledInstances, changeInstance);
     selectionResult = selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     // We don't include instance0 in selection anymore.
-    expectedResult = ImmutableMap.of(oldSeg, instance1);
+    expectedResult = Map.of(oldSeg, instance1);
 
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedResult);
     assertTrue(selectionResult.getUnavailableSegments().isEmpty());
@@ -1778,7 +1777,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
     Map<String, List<Pair<String, String>>> idealSateMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
 
     IdealState idealState = createIdealState(idealSateMap);
@@ -1788,7 +1787,7 @@ public class InstanceSelectorTest {
     //   [segment0] -> [instance2: online]
     //   [segment1] -> [instance2: online]
     Map<String, List<Pair<String, String>>> externalViewMap =
-        ImmutableMap.of(oldSeg, ImmutableList.of(Pair.of(instance2, ONLINE)), newSeg,
+        Map.of(oldSeg, ImmutableList.of(Pair.of(instance2, ONLINE)), newSeg,
             ImmutableList.of(Pair.of(instance2, ONLINE)));
 
     ExternalView externalView = createExternalView(externalViewMap);
@@ -1798,7 +1797,7 @@ public class InstanceSelectorTest {
 
     // No selection because the external view is not in ideal state.
     int requestId = 0;
-    Map<String, String> expectedBalancedInstanceSelectorResult = ImmutableMap.of();
+    Map<String, String> expectedBalancedInstanceSelectorResult = Map.of();
     InstanceSelector.SelectionResult selectionResult =
         selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedBalancedInstanceSelectorResult);
@@ -1825,7 +1824,7 @@ public class InstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:offline]
     Map<String, List<Pair<String, String>>> idealSateMap =
-        ImmutableMap.of(newSeg, ImmutableList.of(Pair.of(instance0, OFFLINE), Pair.of(instance1, ONLINE)), oldSeg,
+        Map.of(newSeg, ImmutableList.of(Pair.of(instance0, OFFLINE), Pair.of(instance1, ONLINE)), oldSeg,
             ImmutableList.of(Pair.of(instance0, OFFLINE), Pair.of(instance1, ONLINE)));
 
     IdealState idealState = createIdealState(idealSateMap);
@@ -1834,7 +1833,7 @@ public class InstanceSelectorTest {
     // External view for two segments
     //   [segment0] -> [instance0:offline, instance1:online]
     Map<String, List<Pair<String, String>>> externalViewMap =
-        ImmutableMap.of(newSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), oldSeg,
+        Map.of(newSeg, ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)), oldSeg,
             ImmutableList.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE)));
 
     ExternalView externalView = createExternalView(externalViewMap);
@@ -1844,7 +1843,7 @@ public class InstanceSelectorTest {
 
     // We don't mark segment as unavailable.
     int requestId = 0;
-    Map<String, String> expectedBalancedInstanceSelectorResult = ImmutableMap.of(oldSeg, instance1, newSeg, instance1);
+    Map<String, String> expectedBalancedInstanceSelectorResult = Map.of(oldSeg, instance1, newSeg, instance1);
 
     InstanceSelector.SelectionResult selectionResult =
         selector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
