@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.client;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
@@ -151,7 +150,7 @@ public class ExternalViewReaderTest {
     configureData(_instanceConfigPlain, true);
     // Run the test
     final Map<String, List<String>> result = _externalViewReaderUnderTest.getTableToBrokersMap();
-    final Map<String, List<String>> expectedResult = ImmutableMap.of("field1",
+    final Map<String, List<String>> expectedResult = Map.of("field1",
         Arrays.asList("first.pug-pinot-broker-headless:8099"));
     // Verify the results
     assertEquals(expectedResult, result);
@@ -176,7 +175,7 @@ public class ExternalViewReaderTest {
   public void testGetBrokersMapByInstanceConfigTlsDefault() {
     configureData(_instanceConfigTls, false);
     final Map<String, List<String>> result = _externalViewReaderUnderTest.getTableToBrokersMap();
-    final Map<String, List<String>> expectedResult = ImmutableMap.of("field1",
+    final Map<String, List<String>> expectedResult = Map.of("field1",
         Arrays.asList("first.pug-pinot-broker-headless:8099"));
     // Verify the results
     assertEquals(expectedResult, result);
@@ -193,7 +192,7 @@ public class ExternalViewReaderTest {
     configureData(_instanceConfigPlain, false);
     // Run the test
     final Map<String, List<String>> result = _externalViewReaderUnderTest.getTableToBrokersMap();
-    final Map<String, List<String>> expectedResult = ImmutableMap.of("field1",
+    final Map<String, List<String>> expectedResult = Map.of("field1",
         Arrays.asList("first.pug-pinot-broker-headless:8099"));
     // Verify the results
     assertEquals(expectedResult, result);
@@ -210,7 +209,7 @@ public class ExternalViewReaderTest {
   public void testGetBrokersMapByInstanceConfigTls() {
     configureData(_instanceConfigTls, true);
     final Map<String, List<String>> result = _externalViewReaderUnderTest.getTableToBrokersMap();
-    final Map<String, List<String>> expectedResult = ImmutableMap.of("field1",
+    final Map<String, List<String>> expectedResult = Map.of("field1",
         Arrays.asList("first.pug-pinot-broker-headless:8090"));
     // Verify the results
     assertEquals(expectedResult, result);
