@@ -21,7 +21,6 @@ package org.apache.pinot.query.planner.physical.v2.opt.rules;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
 import java.util.Deque;
@@ -363,7 +362,7 @@ public class LeafStageWorkerAssignmentRule extends PRelOptRule {
         segmentsForWorker.addAll(segmentsByPartition.get(partitionNum));
       }
       workers.set(workerId, String.format("%s@%s", workerId, workers.get(workerId)));
-      workerIdToSegmentsMap.put(workerId, ImmutableMap.of(tableType, segmentsForWorker));
+      workerIdToSegmentsMap.put(workerId, Map.of(tableType, segmentsForWorker));
     }
     HashDistributionDesc desc = new HashDistributionDesc(ImmutableList.of(keyIndex),
         DistHashFunction.valueOf(function.toUpperCase()), numPartitions);
