@@ -21,7 +21,6 @@ package org.apache.pinot.query;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -48,17 +47,17 @@ public class QueryEnvironmentTestBase {
 
   protected static final Random RANDOM_REQUEST_ID_GEN = new Random();
   public static final Map<String, List<String>> SERVER1_SEGMENTS =
-      ImmutableMap.of("a_REALTIME", ImmutableList.of("a1", "a2"), "b_REALTIME", ImmutableList.of("b1"), "c_OFFLINE",
+      Map.of("a_REALTIME", ImmutableList.of("a1", "a2"), "b_REALTIME", ImmutableList.of("b1"), "c_OFFLINE",
           ImmutableList.of("c1"), "d_OFFLINE", ImmutableList.of("d1"), "e_OFFLINE", ImmutableList.of("e1"));
   public static final Map<String, List<String>> SERVER2_SEGMENTS =
-      ImmutableMap.of("a_REALTIME", ImmutableList.of("a3"), "c_OFFLINE", ImmutableList.of("c2", "c3"),
+      Map.of("a_REALTIME", ImmutableList.of("a3"), "c_OFFLINE", ImmutableList.of("c2", "c3"),
           "d_REALTIME", ImmutableList.of("d2"), "d_OFFLINE", ImmutableList.of("d3"), "e_REALTIME",
           ImmutableList.of("e2"), "e_OFFLINE", ImmutableList.of("e3"));
   public static final Map<String, Schema> TABLE_SCHEMAS = new HashMap<>();
   public static final Map<String, Pair<String, List<List<String>>>> PARTITIONED_SEGMENTS_MAP = new HashMap<>();
   public static final int PARTITION_COUNT = 4;
   public static final Map<String, String> PARTITIONED_TABLES =
-      ImmutableMap.of("a_REALTIME", "col2", "b_REALTIME", "col1");
+      Map.of("a_REALTIME", "col2", "b_REALTIME", "col1");
   static {
     for (Map.Entry<String, String> e : PARTITIONED_TABLES.entrySet()) {
       String tableName = e.getKey();
