@@ -18,9 +18,9 @@
  */
 package org.apache.pinot.segment.local.segment.index.readers.text;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.File;
 import java.io.IOException;
+import java.util.Map;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
@@ -32,7 +32,7 @@ public class LuceneTextIndexCompatibleTest {
       throws IOException {
     File indexPath =
         new File(LuceneTextIndexCompatibleTest.class.getClassLoader().getResource("data/lucene_80_index").getPath());
-    try (LuceneTextIndexReader lucene80Index = new LuceneTextIndexReader("Text", indexPath, 1000, ImmutableMap.of())) {
+    try (LuceneTextIndexReader lucene80Index = new LuceneTextIndexReader("Text", indexPath, 1000, Map.of())) {
       Assert.assertNotNull(lucene80Index);
     }
   }
