@@ -19,7 +19,6 @@
 package org.apache.pinot.spi.utils;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import java.io.File;
 import java.io.IOException;
@@ -577,7 +576,7 @@ public class JsonUtilsTest {
     ClassLoader classLoader = JsonUtilsTest.class.getClassLoader();
     File file = new File(Objects.requireNonNull(classLoader.getResource(JSON_FILE)).getFile());
     Map<String, FieldSpec.FieldType> fieldSpecMap =
-        ImmutableMap.of("d1", FieldSpec.FieldType.DIMENSION, "hoursSinceEpoch", FieldSpec.FieldType.DATE_TIME, "m1",
+        Map.of("d1", FieldSpec.FieldType.DIMENSION, "hoursSinceEpoch", FieldSpec.FieldType.DATE_TIME, "m1",
             FieldSpec.FieldType.METRIC);
     Schema inferredPinotSchema =
         JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, new ArrayList<>(), ".",
