@@ -19,7 +19,6 @@
 package org.apache.pinot.tsdb.planner;
 
 import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableMap;
 import java.lang.reflect.Constructor;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -124,7 +123,7 @@ public class TimeSeriesQueryEnvironment {
     Preconditions.checkState(!serverInstances.isEmpty(), "No servers selected for the query");
     if (serverInstances.size() == 1) {
       // For single-server case, the broker fragment consists only of the TimeSeriesExchangeNode.
-      return ImmutableMap.of(planNodes.get(0).getId(), 1);
+      return Map.of(planNodes.get(0).getId(), 1);
     }
     // For the multi-server case, the leafIdToSegmentsByInstanceId map already has the information we need, but we
     // just need to restructure it so that we can get number of servers by planId.
